medicine tab text no longer rewraps when opening

--- a/_css/ui.scss
+++ b/_css/ui.scss
@@ -93,6 +93,10 @@
         }
     }
 
+    .content-wrapper {
+        width: 300px;
+    }
+
 }
 
 .flyout-button {
